--- a/test/test.html
+++ b/test/test.html
@@ -4,16 +4,12 @@
 
 		<script src="../builds/mvcc.full.js"></script>
 		<script>
-			mvcc.com.create({
-				draw: function(el) {
-					el.on('click', function() {
-						alert('good');
-					});
-					return "123" + el.html();
-				}
-			}, 'app-test');
-
-			mvcc.com.renderAll();
+			mvcc.route.map('#/home/index', function() {
+				alert('you clicked home/index and passed:' + mvcc.route.path(2));
+			});
+			mvcc.route.map('#/home/create', function() {
+				alert('you clicked home/create and passed:' + mvcc.route.path(2));
+			});
 		</script>
 	</body>
 </html>
